# led_strip_spi

./: .eil.yml  CMakeLists.txt  README.md  idf_component.yml  led_strip_spi.c  led_strip_spi_esp32.h  led_strip_spi_sk9822.c
.github/workflows/: publish-esp-component.yml  validate-esp-component.yml
docs/: index.rst
examples/default/: CMakeLists.txt  Makefile
examples/default/main/: effect.c  idf_component.yml  main.c
